tests/semantic/invalid/07_divide_by_zero.tc
// 非法测试7: 常量表达式除零
// 目标：应报错 SEM_DIVIDE_BY_ZERO
const int A = 10 / 0;  // 除零

int main(void) {
    return 0;
}
